feat: update search by word and meaning